# bqx-cli

./: Cargo.toml  PHASE1_PLAN.md  PHASE2_PLAN.md  PHASE3_PLAN.md  PHASE4_PLAN.md  PHASE5_PLAN.md  PHASE6_PLAN.md  README.md  RELEASE_NOTES.md  demo.md
.github/workflows/: ci.yml  publish-npm.yml  release.yml  sdk-sync.yml  smoke-install.yml
benchmarks/: README.md  manifest.yaml
benchmarks/scripts/: run_benchmarks.sh  score_results.py
benchmarks/tasks/: bigquery_overlap.yaml  dcx_differentiated.yaml  spanner_overlap.yaml
completions/: _bqx  _dcx  bqx.bash  bqx.fish  dcx.bash  dcx.fish
deploy/ca/: verified_queries.yaml
docs/: analytics_sdk_alignment_plan.md  analytics_sdk_contract.md  benchmark_results_bigquery.md  bqx-vs-bq.md  bqx_one_pager.md  bqx_prd_rfc.md  compact-output-execution-plan.md  compact-output-proposal.md  dcx-vs-bq.md  dcx_one_pager.md  dcx_prd_rfc.md  e2e-validation.md  github-actions.md  source-matrix.md
npm/: .gitignore  package.json
scripts/: check-version-sync.sh  demo.sh  package-npm.sh  parse_sdk_cli.py  update_analytics_sdk_contract.sh
src/: auth.rs  cli.rs  config.rs  lib.rs  main.rs  models.rs  output.rs  tty.rs
tests/: alloydb_command_tests.rs  auth_tests.rs  bigquery_tests.rs  ca_profile_tests.rs  ca_tests.rs  cloudsql_command_tests.rs  command_tests.rs  config_tests.rs  database_helper_command_tests.rs  discovery_tests.rs  eval_tests.rs  gemini_tests.rs  looker_command_tests.rs  mcp_tests.rs  output_tests.rs  profile_command_tests.rs  sanitize_tests.rs  skill_generation_tests.rs  snapshot_tests.rs  spanner_command_tests.rs
(+333 files in other folders)
